src/objects/Awards_Commendations__c.object
<CustomObject>
    <description>Tracks award submittals and awards won by AECOM
Records and storse letters of commendation received from clients related to AECOM projects and staff performance on projects</description>
    <fields>
        <fullName>AECOM_Office_City__c</fullName>
        <description>Office location with primary responsibility for the award</description>
        <inlineHelpText>Enter the AECOM office location most closely associated with this award, if any.</inlineHelpText>
        <label>AECOM Office City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AECOM_Office_Country__c</fullName>
        <label>AECOM Office Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Indian Ocean Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AECOM_Office_State__c</fullName>
        <label>AECOM Office State</label>
        <picklist>
            <picklistValues>
                <fullName>Aguascalientes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baja California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baja California Sur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campeche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiapas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chihuahua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coahuila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colima</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distrito Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durango</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guanajuato</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guerrero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hidalgo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AECOM_Region__c</fullName>
        <description>Region(s) where project took place</description>
        <inlineHelpText>Select region(s) where project took place or region winning award</inlineHelpText>
        <label>AECOM Region</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Mid-Atlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US West</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Activity_Description_and_Accouplishments__c</fullName>
        <description>60 to 70 words. Include descriptive facts such as benefits and ipact to event sponsor and community. Post-event, provide results, e.g., number of cans of food donated, amount of money raised, bags of trash collected, number of AECOM employee hours volunteered.</description>
        <inlineHelpText>60 to 70 words. Include descriptive facts such as benefits and ipact to event sponsor and community. Post-event, provide results, e.g., number of cans of food donated, amount of money raised, bags of trash collected, AECOM employee hours volunteered.</inlineHelpText>
        <label>Activity Description and Accomplishments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Also_published_in_Date__c</fullName>
        <description>Date associated with the publication in &quot;Also published in&quot;</description>
        <inlineHelpText>Enter date associated with the publication in &quot;Also published in&quot;</inlineHelpText>
        <label>Date of &quot;Also published in&quot;</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Also_published_in__c</fullName>
        <description>Other places where this award was announced</description>
        <inlineHelpText>Enter additional places where this award was publilshed.</inlineHelpText>
        <label>Also published in</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approved_for_external_use__c</fullName>
        <description>Can this award be cited in proposals and other external documents?</description>
        <label>Approved for external use?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Award_Geography__c</fullName>
        <description>Geography in which the project or person related to the award or letter was won, or even took place.</description>
        <inlineHelpText>Enter geography where work or event being recognized resides, or Global if recognition is for worldwide performance.</inlineHelpText>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Award_Level_1__c</fullName>
        <description>Level such as &quot;Diamond&quot; or &quot;Merit&quot;</description>
        <inlineHelpText>Enter appropriate level such as &quot;Diamond&quot; or &quot;Merit&quot;</inlineHelpText>
        <label>Award Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Program_Name__c</fullName>
        <description>Name of the overall program</description>
        <inlineHelpText>e.g., Engineering Excellence Awards</inlineHelpText>
        <label>Award Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Status__c</fullName>
        <description>Current status of award</description>
        <inlineHelpText>Current status of award</inlineHelpText>
        <label>Award Status</label>
        <picklist>
            <picklistValues>
                <fullName>in Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shortlisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highly Commended (e.g., second place)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commended (e.g., third place)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Go (not entering)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Line_s__c</fullName>
        <description>All BLs that worked on the project or otherwise participated in this honor</description>
        <inlineHelpText>Select all BLs that worked on the project or otherwise participated in this honor</inlineHelpText>
        <label>Business Line(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design + Planning + Economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining and Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning, Design and Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program, Cost, Consultancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Categories_Available__c</fullName>
        <description>Lists all categories listed by the Presenting Organization</description>
        <inlineHelpText>Enter all categories listed by the Presenting Organization</inlineHelpText>
        <label>Categories Available</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category_Entered__c</fullName>
        <description>Category or categories  in which AECOM is submitting</description>
        <inlineHelpText>Enter the Presenting Organization&apos;s category or categories  in which AECOM is submitting</inlineHelpText>
        <label>Category Entered</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Client for the project that won the award</description>
        <inlineHelpText>If the award is related to a project, select the end client (owner) of the project.</inlineHelpText>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Awards1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Enter other information useful to end users</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_at_Presenting_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of person at the local chapter</description>
        <inlineHelpText>Name of person at the local chapter</inlineHelpText>
        <label>Contact at Presenting Organization</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Award_Won__c</fullName>
        <description>Date the award was presented, date on award</description>
        <inlineHelpText>Date the award was presented, date on award</inlineHelpText>
        <label>Date Award Won</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Commendation_Letter__c</fullName>
        <inlineHelpText>Date on the scanned letter or email.</inlineHelpText>
        <label>Date of Commendation Letter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_published_in_AECOMinute__c</fullName>
        <label>Date published in AECOMinute</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_published_in_AWW__c</fullName>
        <label>Date published in AWW</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_published_in_Excellence_Alert__c</fullName>
        <label>Date published in Excellence Alert</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_published_in_Focus__c</fullName>
        <label>Date published in Focus</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_published_on_myAECOM__c</fullName>
        <label>Date published on myAECOM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entry_Fee__c</fullName>
        <description>Fee for submitting an entry for consideration</description>
        <inlineHelpText>Fee for submitting an entry for consideration</inlineHelpText>
        <label>Entry Fee</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Entry_Prepared_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>name of primary Communications or Creative Marketing Services person</description>
        <inlineHelpText>Enter name of primary Comms or CMS person</inlineHelpText>
        <label>Entry Prepared By</label>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipName>Awards1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Use_Notes__c</fullName>
        <description>Reasons this award should not be cited externally</description>
        <label>External Use Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Graphic__c</fullName>
        <label>Graphic</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Graphics_Note__c</fullName>
        <description>Caption other other information</description>
        <inlineHelpText>Enter caption-type information</inlineHelpText>
        <label>Graphics Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Number__c</fullName>
        <description>Unique ID number to identify records.</description>
        <displayFormat>SF ID-{000000}</displayFormat>
        <inlineHelpText>Salesforce-generated ID number</inlineHelpText>
        <label>ID Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Intent_to_submit_Date__c</fullName>
        <inlineHelpText>Date by which awarding organization must be informed of our intention to submit a nomination document.</inlineHelpText>
        <label>Intent-to-submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_Award__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this was an award AECOM presented to an employee or group of employees, rather than an award that an outside entity presented to AECOM or an AECOM project or employee.</description>
        <inlineHelpText>Check if this is an award that AECOM presented to an employee or group of employees, rather than an award that an outside entity presented to AECOM or an AECOM project or employee.</inlineHelpText>
        <label>Internal Award?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_of_submittal__c</fullName>
        <description>Language the award documentation must be submitted in.</description>
        <inlineHelpText>Select the language the award documentation must be submitted in.</inlineHelpText>
        <label>Language of submittal</label>
        <picklist>
            <picklistValues>
                <fullName>Albanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (Simplified)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (Traditional)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estonian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hebrew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Icelandic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latvian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lithuanian</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Letter_Text__c</fullName>
        <description>Typed text of letters that have been scanned and are therefore unsearchable in pdf format; used for searching only</description>
        <inlineHelpText>Typed text of letters that have been scanned and are therefore unsearchable in pdf format; used for searching only. Use PDF-XChange Tools or other software to convert text.</inlineHelpText>
        <label>Letter Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link_to_Image__c</fullName>
        <description>Link to photo or other image related to the award.</description>
        <inlineHelpText>Enter a link to photo or other image related to the award. Make sure the link is to a site accessible to users.</inlineHelpText>
        <label>Link to Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Scanned_Letter__c</fullName>
        <description>url of scanned letter in SF Library</description>
        <inlineHelpText>Upload letter to Salesforce Commendation Letters library, then copy and paste link into this field.</inlineHelpText>
        <label>Link to Scanned Letter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Marketing_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Marketing Coordinator working on award submittal</description>
        <inlineHelpText>Marketing Coordinator working on award submittal</inlineHelpText>
        <label>Marketing Coordinator</label>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipName>Awards3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Need_to_Know__c</fullName>
        <description>Information important for anyone citing this award, e.g., in a proposal</description>
        <inlineHelpText>Enter information important for anyone citing this award, e.g., in a proposal</inlineHelpText>
        <label>Need to Know</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Presenting_Sponsoring_Organizaton__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Organization that gave the award, prepared the letter, or sponsored the event</description>
        <inlineHelpText>Select the organization that gave the award, prepared the letter, or sponsored the event</inlineHelpText>
        <label>Presenting/Sponsoring Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Awards/Commendations (Presenting Organization)</relationshipLabel>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AECOM PM or other person most closely associated with the award</description>
        <inlineHelpText>AECOM PM or other person most closely associated with the award</inlineHelpText>
        <label>Project Manager</label>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <description>AIMS (or other) project number(s)</description>
        <inlineHelpText>If this is a project-related award, enter the AIMS (or other) project number(s)</inlineHelpText>
        <label>Project Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published_in_AECOMinute__c</fullName>
        <description>Indicates whether the award was (or is going to be) announced in this publication.</description>
        <label>Published in AECOMinute?</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Published_in_AWW__c</fullName>
        <description>Indicates whether the award was (or is going to be) announced in this publication.</description>
        <label>Published in AWW?</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Published_in_Excellence_Alert__c</fullName>
        <description>Indicates whether the award was (or is going to be) announced in this publication.</description>
        <label>Published in Excellence Alert?</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Published_in_Focus__c</fullName>
        <description>Indicates whether the award was (or is going to be) announced in this publication.</description>
        <label>Published in Focus?</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Published_in__c</fullName>
        <inlineHelpText>Choose all that apply, and add additional below.</inlineHelpText>
        <label>Published in:</label>
        <picklist>
            <picklistValues>
                <fullName>AECOMinute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellence Alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Focus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>myAECOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Published_on_myAECOM__c</fullName>
        <description>Indicates whether the award was (or is going to be) announced in this publication.</description>
        <label>Published on myAECOM?</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AECOM person who was nominated for this award or is the subject of the letter or led the event.</description>
        <inlineHelpText>Select AECOM person who was nominated for this award or is the subject of the letter or led the event.</inlineHelpText>
        <label>Related Employee</label>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipName>Awards2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Event__c</fullName>
        <description>Event such as awards banquet related to the award</description>
        <inlineHelpText>Enter name of event such as awards banquet related to the award</inlineHelpText>
        <label>Related Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Other__c</fullName>
        <description>Who/what is associated with the award or letter if not an AECOM employee or project, or if project or person is not found in lookup</description>
        <inlineHelpText>Enter who or what is associated with the award or letter if not an AECOM employee or project, or if project or person is not found in lookup</inlineHelpText>
        <label>Related - Other</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project associated with the award or letter</description>
        <inlineHelpText>Select project associated with the award or letter</inlineHelpText>
        <label>Related Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submittal_Due_Date__c</fullName>
        <description>Date nomination package is due</description>
        <label>Submittal Due Date</label>
        <type>Date</type>
    </fields>
</CustomObject>